web: Fix layout issue for various screen sizes

--- a/app/src/app/app.component.less
+++ b/app/src/app/app.component.less
@@ -50,26 +50,36 @@ nz-header {
     float: left;
 }
 
-/* [nz-menu] {
-  line-height: 64px;
-} */
 
+.main-container {
+    // display: block;
+    margin-top: 20px;
+    padding-bottom: 36px;
+    min-height: 100%;
+}
 nz-breadcrumb {
     margin: 16px 0;
 }
 
-nz-content {
-    padding: 0 50px;
-}
 
 nz-footer {
     text-align: center;
+    min-height: 60px;
+    padding: 20px 50px;
 }
 
 .inner-content {
-    background: #fff;
     padding: 24px;
     min-height: 280px;
+}
+
+@media (min-width: 800px) {
+    nz-content {
+        padding: 0 50px;
+    }
+    .inner-content {
+        height: calc(100vh - 130px);
+    }
 }
 
 nz-avatar {
